--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
     "react-redux": "^8.0.5",
+    "react-swipeable": "^7.0.0",
     "typescript": "4.9.5"
   }
 }
